RESOLVED FIXED60202
[chromium] REGRESSION(85136): Composited content vanishes when transform-style changes from preserve-3d to flat
https://bugs.webkit.org/show_bug.cgi?id=60202
Summary [chromium] REGRESSION(85136): Composited content vanishes when transform-styl...
James Robinson
Reported 2011-05-04 12:40:14 PDT
[chromium] REGRESSION(85136): Composited content vanishes when transform-style changes from preserve-3d to flat
Attachments
Patch (4.78 KB, patch)
2011-05-04 12:41 PDT, James Robinson
no flags
James Robinson
Comment 1 2011-05-04 12:41:50 PDT
Kenneth Russell
Comment 2 2011-05-04 17:30:00 PDT
Comment on attachment 92303 [details] Patch Looks good.
James Robinson
Comment 3 2011-05-04 18:32:37 PDT
Comment on attachment 92303 [details] Patch Thanks Ken!
WebKit Commit Bot
Comment 4 2011-05-04 20:03:44 PDT
Comment on attachment 92303 [details] Patch Clearing flags on attachment: 92303 Committed r85825: <http://trac.webkit.org/changeset/85825>
WebKit Commit Bot
Comment 5 2011-05-04 20:03:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.