2011-05-04  James Robinson  <jamesr@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] REGRESSION(85136): Composited content vanishes when transform-style changes from preserve-3d to flat
        https://bugs.webkit.org/show_bug.cgi?id=60202

        Adds a regression test for composited content changing from transform-style: preserve-3d to flat.

        * compositing/repaint/transform-style-change-expected.png: Added.
        * compositing/repaint/transform-style-change-expected.txt: Added.
        * compositing/repaint/transform-style-change.html: Added.
2011-05-04  James Robinson  <jamesr@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] REGRESSION(85136): Composited content vanishes when transform-style changes from preserve-3d to flat
        https://bugs.webkit.org/show_bug.cgi?id=60202

        In r85136 I accidentally transposed two lines in GraphicsLayerChromium when adding a null check.  This switches
        the order back and adds a regression test.

        Test: compositing/repaint/transform-style-change.html

        * platform/graphics/chromium/GraphicsLayerChromium.cpp:
        (WebCore::GraphicsLayerChromium::updateLayerPreserves3D):

Canonical link: https://commits.webkit.org/75509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85825 268f45cc-cd09-0410-ab3c-d52691b4dbfc