Source/WebCore/platform/graphics/chromium/GraphicsLayerChromium.cpp
@@ -588,9 +588,9 @@ void GraphicsLayerChromium::updateLayerPreserves3D()
         updateSublayerList();
     } else if (!m_preserves3D && m_transformLayer) {
         // Relace the transformLayer in the parent with this layer.
+        m_layer->removeFromSuperlayer();
         if (m_transformLayer->superlayer())
             m_transformLayer->superlayer()->replaceSublayer(m_transformLayer.get(), m_layer.get());
-        m_layer->removeFromSuperlayer();
 
         // Release the transform layer.
         m_transformLayer = 0;
